[gd_scene load_steps=3 format=3 uid="uid://binjyt4h7ie4y"]

[ext_resource type="Script" uid="uid://bnjunv66d1wr6" path="res://UI/menu/main_menu.gd" id="1_24vui"]
[ext_resource type="PackedScene" uid="uid://bskoap21ixc5w" path="res://UI/instructions/how_to_play.tscn" id="2_a51uh"]

[node name="Main_Menu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_24vui")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="HowToPlay" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "How to Play"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HowToPlay" parent="." instance=ExtResource("2_a51uh")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
